# wispr-lite

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  FAQ.md  LICENSE  Makefile  PROMPT.md  README.md  claude.md  gemini.md  pyproject.toml  requirements-user-install.txt  requirements.txt  wispr-lite  wispr-lite.desktop
.dev/: COLLAB.md  NEXT_SESSION_TESTING.md
debian/: changelog  control  install  rules  wispr-lite-wrapper  wispr-lite.postinst.debhelper  wispr-lite.prerm.debhelper
docs/: COLLAB.md  CONFIG.md  DEVELOPMENT.md  PACKAGING.md
scripts/: install.sh  preload_models.sh  smoke_test.sh  uninstall.sh
tests/: __init__.py  test_asr.py  test_cli.py  test_commands.py  test_config.py  test_integration.py  test_notifications.py  test_vad.py
wispr_lite/: __init__.py  app.py  cli.py  logging.py  main.py  model_ui.py  pipeline.py  strings.py
wispr_lite/asr/: __init__.py  engine.py  faster_whisper_backend.py
wispr_lite/audio/: __init__.py  capture.py  vad.py
wispr_lite/commands/: __init__.py  builtin.py  registry.py
wispr_lite/config/: __init__.py  defaults.yaml  schema.py
wispr_lite/integration/: __init__.py  accessibility.py  cinnamon.py  dbus.py  hotkeys.py  typing.py
wispr_lite/integration/typing/: __init__.py  clipboard.py  core.py  xtest.py
wispr_lite/ui/: __init__.py  confirm_dialog.py  notifications.py  overlay.py  preferences.py  tray.py
wispr_lite/ui/icons/: README.md
